# galtix-test

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  compose.yaml  datamodel.py  fetch_from_gdrive.py  process_phrases.py  pyproject.toml
processors/: word2vec_processor.py
single_use_scripts/: fetch_from_gdrive.py  process_phrases.py
tests/: test_closest_phrases.py
