[tool.poetry]
name = "test-environment"
version = "0.1.0"
description = "Download and pre-process "
authors = ["Matt Piatkus <mattpiatkus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.1.3"
polars = "0.19.15"
matplotlib = "3.8.2"
numpy = "1.26.2"
scikit-learn = "1.3.2"
fastapi = "0.104.1"
uvicorn = "0.24.0.post1"
pytest = "7.4.3"
gensim = "4.3.2"
smart-open = {extras = ["http"], version = "^6.4.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
